fix z-index for select outer menu

--- a/src/styles/vendor-css/react-select.css
+++ b/src/styles/vendor-css/react-select.css
@@ -153,7 +153,7 @@
   position: absolute;
   top: 100%;
   width: 100%;
-  z-index: 1000;
+  z-index: 3000;
   -webkit-overflow-scrolling: touch;
 }
 .Select-menu {
